ポップアップのjsにXSS対策処理追加、商品新規作成・編集画面のエラー修正
・Popup.jsの商品とトッピングに関連するポップアップ関数にXSS対策を追加しました。
・商品新規作成・編集画面がデベロッパーツールで見た時にエラーを吐いていたので修正しました。(JSP:102～132行)
・商品新規作成・編集画面変更に伴いcssも少し変更しました。(CSS:97行)

--- a/WebContent/css/Product/productform.css
+++ b/WebContent/css/Product/productform.css
@@ -94,6 +94,7 @@ main {
   display: flex;
   flex-wrap: wrap;
   max-width: 600px; /* 必要に応じて調整 */
+  border-radius: 10px;
 }
 
 .checkbox-group label {
